--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-spinners-kit": "^1.9.1",
     "recharts": "^2.13.3",
