--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-spinners-kit": "^1.9.1",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
     "underscore": "^1.13.7"
   },
