modified:   lib/db.js 	modified:   package-lock.json 	modified:   package.json 	new file:   pages/api/admin/appointments.ts 	new file:   pages/api/admin/appointments/route.ts 	new file:   pages/api/admin/auth/check.ts 	new file:   pages/api/admin/getPendingAccounts.ts 	new file:   pages/api/admin/pending-accounts.ts 	new file:   pages/api/admin/stats/route.ts 	new file:   pages/api/admin/updateAccountStatus.ts 	new file:   pages/api/all-files.ts 	new file:   pages/api/appointment/book.ts 	new file:   pages/api/appointment/route.ts 	new file:   pages/api/appointments.ts 	new file:   pages/api/auth/adminlogin.ts 	new file:   pages/api/auth/adminlogout.ts 	new file:   pages/api/auth/adminregister.ts 	new file:   pages/api/auth/getAdminUser.ts 	new file:   pages/api/auth/getStudentUser.ts 	new file:   pages/api/auth/student-profile.ts 	new file:   pages/api/auth/studentlogin.ts 	new file:   pages/api/auth/studentlogout.ts 	new file:   pages/api/auth/studentregister.ts 	modified:   pages/api/recycle-bin.ts 	new file:   public/files/Medical Consultation/0987_Medical Consultation_1741246479740.docx 	new file:   public/files/Medical Consultation/338824_Medical Consultation_1738822379847.docx 	new file:   public/files/Medical Consultation/338824_Medical Consultation_1738822391199.pdf 	new file:   public/recycle_bin/143143_Medical Consultation_1741785969795.docx 	new file:   public/recycle_bin/143143_Medical Consultation_1741787389651.doc 	modified:   src/app/Login/page.tsx 	new file:   src/app/admin/accounts/page.tsx 	new file:   src/app/admin/appointments/page.tsx 	new file:   src/app/admin/dashboard/page.tsx 	new file:   src/app/admin/login/page.tsx 	new file:   src/app/admin/registration/page.tsx 	modified:   src/app/archives/page.tsx 	new file:   src/app/components/AdminLogin.tsx 	new file:   src/app/components/AdminRegistrationForm.tsx 	new file:   src/app/components/AdminSidebar.tsx 	new file:   src/app/components/AppointmentForm.tsx 	new file:   src/app/components/App

--- a/package.json
+++ b/package.json
@@ -15,12 +15,21 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.13.0",
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
+    "cookie": "^1.0.2",
     "cookies-next": "^5.0.2",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "express-rate-limit": "^7.5.0",
     "formidable": "^3.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-simple": "^0.5.6",
+    "lucide-react": "^0.477.0",
     "mammoth": "^1.8.0",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
@@ -41,6 +50,7 @@
     "underscore": "^1.13.7"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
