--- a/package.json
+++ b/package.json
@@ -43,18 +43,22 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
-    "react-modal": "^3.16.1",
+    "react-modal": "^3.16.3",
     "react-spinners-kit": "^1.9.1",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
     "underscore": "^1.13.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
