--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@heroicons/react": "^2.2.0",
     "@lottiefiles/dotlottie-react": "^0.13.0",
     "@nextui-org/react": "^2.4.8",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
@@ -37,6 +39,8 @@
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "next-connect": "^0.12.2",
+    "nodemailer": "^6.10.0",
+    "nookies": "^2.5.2",
     "option": "^0.2.4",
     "react": "^18.0.0",
     "react-calendar": "^5.1.0",
@@ -57,6 +61,7 @@
     "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
